# fsspec-manager

./: README.md  pyproject.toml
fsman/: __init__.py  keymap.py  manager.py
tests/: run.py
