[tool.poetry]
name = "fsspec-manager"
version = "0.1.0"
description = "Curses TUI for fsspec filesystems"
authors = ["Vladislav Wohlrath <vladislav@wohlrath.cz>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [ { include = "fsman" } ]

[tool.poetry.dependencies]
python = "^3.9"
fsspec = ">=2022"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
